2007-12-01  Thomas Orgis  <sobukus@users.sourceforge.net>

	* src/gplt_x11.c (process_configure_notify_event):  Test for failure of
	window resize, and do not loop indefinitely trying to resize. Fixes
	infinite loop problem on ion and fluxbox window managers.
	Bug #1836959 #1614928

2007-11-29  Lars Hecking  <lhecking@users.sourceforge.net>

	* term/Makefile.am.in: Generate postscript_DATA from .ps and .txt
	files in PostScript subdir.

2007-11-25  Vladimir  <qva@users.sourceforge.net>

	* term/svg.trm (SVG_init): Correct encoding names to koi8-r, koi8-u.
	Bug #1838066

2007-11-24  Allin Cottrell  <cottrell@wfu.edu>

	* src/wxterminal/gp_cairo.c (gp_cairo_convert): Test input for validity
	as a UTF-8 string. If it is already UTF-8, don't try to convert it.

2007-11-24  Ethan A Merritt  <merritt@u.washington.edu>

	* src/variable.c (locale_handler):  Set the character encoding during
	initialization (LC_CTYPE).  This was happening anyway for interactive
	sessions using libreadline, and for default terminal type wxt.

2007-11-23  Ethan A Merritt  <merritt@u.washington.edu>

	* term/fig.trm (FIG_boxfill):  Update current color before drawing.
	Bug #1837187

2007-11-22  Morten MacFly  <mortenmacfly@users.sourceforge.net>

	* config/config.nt: #define vsnprintf

2007-11-21  Ethan A Merritt  <merritt@u.washington.edu>

	* term/estimate.trm: Never return a zero size estimate for a 
	non-empty string. Promote fraction characters to 1.

2007-11-21  Allin Cottrell  <cottrell@wfu.edu>

	* term/emf.trm (EMF_filled_polygon): Do not alter original color
	when processing filled areas with opacity < 1.0

2007-11-20  Ethan A Merritt  <merritt@u.washington.edu>

	* term/post.trm (PS_options PS_RememberFont ENHPS_OPEN)
	src/term.c (enhanced_recursion): Move the PostScript-specific
	RememberFont() cruft out of enhanced_recursion() and into ENHPS_OPEN.
	This both cleans up the generic enhanced recursion code and removes
	code duplication.  Filter out blatently improper font names.